syntax = "proto3";
package cosmicether.ethquery;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ajansari95/cosmicether/x/ethquery/types";

message EthQuery {
  string id = 1;
  string query_type = 2;
  bytes request = 3;
  string callback_id = 4;
  uint64 block_height = 5;
}
